[gd_scene load_steps=3 format=3 uid="uid://b3tcpsy471xsx"]

[ext_resource type="Script" path="res://ui/territory_data_display.gd" id="1_fu0y0"]

[sub_resource type="Theme" id="Theme_udoqn"]
Label/colors/font_color = Color(0.125911, 0.125911, 0.125911, 1)
Label/font_sizes/font_size = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_udoqn")
script = ExtResource("1_fu0y0")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 0
offset_right = 296.0
offset_bottom = 97.0
mouse_filter = 1
color = Color(1, 0.843137, 0.768627, 1)

[node name="ColorRect5" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -47.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="Name" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Sulfuric Bog"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -146.0
offset_top = -44.0
offset_right = 146.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
mouse_filter = 1
color = Color(1, 0.67451, 0.639216, 1)

[node name="Spears" type="Label" parent="ColorRect/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
mouse_filter = 1
color = Color(0.788235, 0.67451, 0.639216, 1)

[node name="Gears" type="Label" parent="ColorRect/HBoxContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
mouse_filter = 1
color = Color(0.960784, 0.894118, 0.533333, 1)

[node name="Books" type="Label" parent="ColorRect/HBoxContainer/ColorRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="ColorRect4" type="ColorRect" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
mouse_filter = 1
color = Color(0.721569, 0.972549, 0.568627, 1)

[node name="Baskets" type="Label" parent="ColorRect/HBoxContainer/ColorRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Capacity" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 49.0
offset_bottom = 38.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
